homepage's html and css template

--- a/coursera/html/homepage.html
+++ b/coursera/html/homepage.html
@@ -10,12 +10,13 @@
                 <div id="page-title">CSE216 Project</div>
             </div>
         </header>
+        <div class="course-header">
+            <p>Course Name</p>
+        </div>
         <div class="main-body">
             <div class="page-wrapper">
-                <div class="course-name">
-                    <p>Course Name</p>
-                </div>
                 <div class="outline">
+                    <p>Outline</p>
                     <ol id="course-outline">
                         <li><a href="0.html">1.0</a></li>
                         <li><a href="1.html">1.1</a></li>
