--- a/coursera/html/homepage.html
+++ b/coursera/html/homepage.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Project 216</title>
-        <link type="text/css" rel="stylesheet" href="css/style.css" />
+        <link type="text/css" rel="stylesheet" href="../static/css/homepage.css" />
     </head>
     <body>
         <header>
