Revert "add video"
This reverts commit 59a9fcb0f8038147d1fcb610bb7ebaa31030648a.

--- a/coursera/html/vspage.html
+++ b/coursera/html/vspage.html
@@ -6,8 +6,8 @@
 
         <link href="http://vjs.zencdn.net/4.2/video-js.css" rel="stylesheet">
         <link href="../static/css/videojs.markers.css" rel="stylesheet">
-        <script src="../static/js/jquery-2.0.3.min.js"></script>
-        <script src="../static/js/video.js"></script>
+        <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+        <script src="http://vjs.zencdn.net/4.2/video.js"></script>
         <script src='../static/js/videojs.markers.js'></script>
 
         <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -37,7 +37,7 @@
             <div class="col-md-7">
 
               <video id="test_video" controls preload="none" class="video-js vjs-default-skin" width="800" height="450">
-                <source src="../static/lecture.mp4" type="video/mp4">    
+                <source src="https://d3c33hcgiwev3.cloudfront.net/MWII_12-01.1eec7f808f5311e38d9781dc7603555a/full/360p/index.mp4?Expires=1448582400&Signature=Q-KUYtaAJgwd1grSfLFY~A-3DlDAGcympybvmh9zuZXtdZ3Gig8JqJ4Um4kj~XpH6dwZ3d99DymQ21CNVAkDDhwMpQFMZNAFm1n~mjX25LnKnHUV9OyUhAPTjp5ItbeE2yTg0N7RV31QvDfxdJCyJ5RX6DyaNKJkVaEJLs9vx9I_&Key-Pair-Id=APKAJLTNE6QMUY6HBC5A" type="video/mp4">    
               </video>
               
             </div>
